--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,12 +4,12 @@ name: Build
 on:
   push:
     branches:
-      - Tkinter
+      - main
     tags:
       - "*"
   pull_request:
     branches:
-      - Tkinter
+      - main
 
 jobs:
   build:
