--- a/.github/workflows/reuse-check.yml
+++ b/.github/workflows/reuse-check.yml
@@ -12,8 +12,9 @@ on:
   pull_request:
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  REUSE_Check:
+    name: "REUSE Compliance Check"
+    runs-on: ubuntu-latest  
     steps:
       - name: "🧰 Checkout"
         uses: actions/checkout@v3
