--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 [tool.poetry]
 name = "jmbde"
 version = "0.2.2"
-description = "A BDE tool"
+description = "A Business Data Extraction (BDE) tool"
 authors = ["Jürgen Mülbert <juergen.muelbert@outlook.de>"]
 license = "GPL-3.0"
 readme = "README.rst"
@@ -11,8 +11,8 @@ homepage = "https://github.com/jmuelbert/jmbde-python"
 repository = "https://github.com/jmuelbert/jmbde-python"
 documentation = "https://jmbde-python.readthedocs.io"
 
-# Keywords description https://python-poetry.org/docs/pyproject/#keywords
-keywords = ["jmbde", "jmbde-python", "business", "BDE", "datebase"]
+# Keywords description: https://python-poetry.org/docs/pyproject/#keywords
+keywords = ["jmbde", "business-data-extraction", "BDE", "database", "python-tool"]
 
 # Pypi classifiers: https://pypi.org/classifiers/
 classifiers = [
@@ -20,15 +20,16 @@ classifiers = [
   "Environment :: Console",
   "Intended Audience :: Developers",
   "Intended Audience :: End Users/Desktop",
-  "License :: OSI Approved :: GNU Public License 3.0 (GPL-3.0)",
+  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
   "Natural Language :: English",
   "Operating System :: OS Independent",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.6",
-  "Programming Language :: Python :: 3.7",
-  "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Topic :: Software Development :: Libraries :: Python Modules",
   "Topic :: Office/Business",
 ]
 
@@ -36,36 +37,34 @@ classifiers = [
 Changelog = "https://github.com/jmuelbert/jmbde-python/releases"
 
 [tool.poetry.dependencies]
-python = ">=3.6.5, <4.0"
-click = "^8.0.0"
-pyside2 = "^5.13.2"
+python = ">=3.9, <4.0"
+click = "^8.0"
+pyside6 = "^6.0" # Updated to Qt 6.x
 
 [tool.poetry.dev-dependencies]
 coverage = { extras = ["toml"], version = "^5.3" }
-pytest = "^6.1.2"
-safety = "^1.9.0"
+pytest = "^6.1"
+safety = "^1.9"
 mypy = "^0.910"
-typeguard = "^2.10.0"
-xdoctest = "^0.15.0"
-sphinx = "^4.0.0"
+typeguard = "^2.10"
+xdoctest = "^0.15"
+sphinx = "^4.0"
 sphinx-autobuild = "^2021.3.14"
-pre-commit = "^2.7.1"
+pre-commit = "^2.7"
 black = "^21.5b1"
 flake8 = "^3.8.3"
-flake8-bandit = "^2.1.2"
-flake8-bugbear = "^21.4.3"
-flake8-docstrings = "^1.5.0"
-flake8-rst-docstrings = "^0.2.3"
-pep8-naming = "^0.12.0"
-darglint = "^1.5.5"
-reorder-python-imports = "^2.3.6"
-pre-commit-hooks = "^4.0.1"
-faker = "^8.0.0"
-openpyxl = "^3.0.5"
-
+flake8-bandit = "^2.1"
+flake8-bugbear = "^21.4"
+flake8-docstrings = "^1.5"
+flake8-rst-docstrings = "^0.2"
+pep8-naming = "^0.12"
+darglint = "^1.5"
+reorder-python-imports = "^2.3"
+pre-commit-hooks = "^4.0"
+faker = "^8.0"
+openpyxl = "^3.0"
 
 [tool.poetry.scripts]
-# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
 jmbde = "jmbde.__main__:main"
 
 [tool.coverage.paths]
@@ -77,73 +76,51 @@ source = ["jmbde"]
 
 [tool.coverage.report]
 show_missing = true
-fail_under = 12
+fail_under = 80 # Updated to a more ambitious threshold.
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
 [tool.black]
-target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
-include = '''
-    \.pyi?$
-'''
-extend-exclude = '''
-/(
-    \.git
-  | \.mypy_cache
-  | ^lib/spack/external/
-  | ^opt/
-)/
-'''
+target-version = ["py39", "py310", "py311", "py312"]
+include = "\.pyi?$"
+extend-exclude = """/(
+    \.git|
+    \.mypy_cache|
+    ^lib/spack/external/|
+    ^opt/
+)/"""
 
 [tool.ruff]
 fix = true
 
 [tool.ruff.format]
 docstring-code-line-length = 100
-docstring-code-format = true
 
 [tool.ruff.lint]
 select = ["ALL"]
 ignore = [
-  # Allow non-abstract empty methods in abstract base classes
-  "B027",
-  # Use of `assert` detected
-  "S101",
-  # Use `contextlib.suppress(SchemaRegistryException)` instead of `try`-`except`-`pass`
-  "SIM105",
-  # Missing explicit `return` at the end of function able to return non-`None` value
-  "RET503",
-  # Unnecessary assignment to
-  "RET504",
-  # Unnecessary `else` after `return` statement
-  "RET505",
-  # Unnecessary `elif` after `raise` statement
-  "RET506",
-  # Possible hardcoded password
-  "S105",
-  "S106",
-  # "PLR",  # Design related pylint codes
-  # RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
-  "RUF012",
-  # Use `X | Y` for type annotations
-  "UP007",
+  "B027", # Allow non-abstract empty methods in abstract base classes.
+  "S101", # Allow `assert` usage for testing.
+  "SIM105", # Suppress complex contextlib suggestions.
+  "RET503", # Missing explicit return at the end of functions.
+  "RET504", # Unnecessary assignments after return.
+  "RET505", # Unnecessary else after return.
+  "RET506", # Unnecessary elif after raise.
+  "S105", "S106", # Ignore password warnings.
+  "RUF012", # Ignore mutable class attribute annotations.
+  "UP007", # Suppress type annotation updates for older versions.
 ]
 
 [tool.ruff.per-file-ignores]
 "tests/**/*.py" = [
-  "S101",    # asserts allowed in tests...
-  "FBT",     # don"t care about booleans as positional arguments in tests
-  "INP001",  # no implicit namespace
-  "D",       # don"t care about documentation in tests
-  "S603",    # `subprocess` call: check for execution of untrusted input
-  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
+  "S101", "FBT", "INP001", "D", "S603", "PLR2004",
 ]
 
 [tool.isort]
 profile = "black"
-src_paths = ["src/checkconnect", "tests"]
+src_paths = ["src", "tests"]
 honor_noqa = true
 
 [tool.codespell]
@@ -162,12 +139,12 @@ filterwarnings = ["error"]
 log_cli_level = "info"
 testpaths = ["tests"]
 markers = [
-  "save_engine: marks some of the tests which are using an external package to save a chart to e.g. a png file. This mark is used to run those tests selectively in the build GitHub Action.",
+  "save_engine: marks tests using an external package for saving charts (e.g., PNG). Run selectively in CI.",
 ]
 
 [tool.mypy]
-disallow_untyped_defs = false
-disallow_incomplete_defs = false
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
 follow_imports = "normal"
 ignore_missing_imports = true
 pretty = true
@@ -176,20 +153,19 @@ show_error_codes = true
 strict = true
 explicit_package_bases = true
 namespace_packages = true
-warn_no_return = false
+warn_no_return = true
 warn_unused_ignores = true
 enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
 
 [[tool.mypy.overrides]]
-module = ['checkconnect.*', 'virtualenv.*']
+module = ["checkconnect.*", "virtualenv.*"]
 ignore_missing_imports = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
 warn_no_return = true
 
-
 [tool.pylint]
 max-args = 12
-max-branches = 110
-max-returns = 12
-max-statements = 289
+max-branches = 20 # Reduced to encourage simpler methods.
+max-returns = 6 # Lowered to improve code clarity.
+max-statements = 50
