--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 2
       - name: "⚙️ Install Python"
@@ -85,7 +85,7 @@ jobs:
       NOXSESSION: ${{ matrix.session }}
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: "🐧 ⚙️ Install Linux dependencies"
         if: runner.os == 'Linux'
         run: |
@@ -157,16 +157,16 @@ jobs:
     needs: tests
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: "🐧 ⚙️ Install Linux dependencies"
         run: |
           sudo apt-get update && DEBIAN_FRONTEND=--noninteractive \
           sudo apt-get --no-install-recommends --assume-yes install \
             libegl1
-      - name: Set up Python 3.9
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: 3.11
       - name: Install Poetry
         run: |
           pipx install --pip-args=--constraint=.github/workflows/constraints.txt poetry
@@ -177,7 +177,7 @@ jobs:
           pipx inject --pip-args=--constraint=.github/workflows/constraints.txt nox nox-poetry
           nox --version
       - name: Download coverage data
-        uses: actions/download-artifact@v4.1.7
+        uses: actions/download-artifact@v7
         with:
           name: coverage-data
       - name: Combine coverage data and display human readable report
@@ -221,14 +221,14 @@ jobs:
   deployPrereleases:
     name: Deploy Pre-Release
     if: github.ref == 'refs/heads/master'
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     environment: PreRelease
     needs:
       - build
       - tests
     steps:
       - name: Restore Build Python Module
-        uses: actions/download-artifact@v4.1.7
+        uses: actions/download-artifact@v7
         with:
           name: PythonModule
           path: dist/
@@ -242,7 +242,7 @@ jobs:
   deploy:
     name: Deploy Release on PyPi
     if: startsWith(github.ref, 'refs/tags/')
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     environment: Release
     needs:
       - build
@@ -250,7 +250,7 @@ jobs:
       - changeLog
     steps:
       - name: Restore Build Python Module
-        uses: actions/download-articfact@v2
+        uses: actions/download-articfact@v7
         with:
           name: PythonModule
           path: dist/
